--- a/public/assets/css/apropos.css
+++ b/public/assets/css/apropos.css
@@ -398,7 +398,7 @@
     align-items: center
 }
 
-.image {
+.images {
     overflow: hidden;
     height: 300px;
     width: 240px;
@@ -412,7 +412,7 @@
     border-radius: 30px;
 }
 
-.image:after {
+.images:after {
     content: '';
     position: absolute;
     z-index: 1;
@@ -428,15 +428,15 @@
     transition: .8s
 }
 
-.image:hover:after {
+.images:hover:after {
     transform: translate(-50%, -50%)
 }
 
-.image:hover img {
+.images:hover img {
     /*     transform: translate(-50%, -50%) scale(1.3) rotate(20deg) */
 }
 
-.image img {
+.images img {
     position: absolute;
     height: 100%;
     width: auto;
@@ -446,7 +446,7 @@
     transition: .8s
 }
 
-.image span {
+.images span {
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 400;
@@ -459,7 +459,7 @@
     color: #FFFFFF;
 }
 
-.image p {
+.images p {
     width: 100%;
     font-family: 'Ubuntu';
     font-style: normal;
@@ -472,18 +472,18 @@
     color: #FFFFFF;
 }
 
-.image p {
+.images p {
     top: 70%;
     left: 50%;
 }
 
-.image span {
+.images span {
     top: 80%;
     left: 50%;
 }
 
-.image span,
-.image p {
+.images span,
+.images p {
     position: absolute;
     z-index: 2;
     transform: translate(-2000px, -50%);
@@ -492,8 +492,8 @@
     transition-timing-function: ease-in
 }
 
-.image:hover p,
-.image:hover span {
+.images:hover p,
+.images:hover span {
     transform: translate(-50%, -50%);
     transition-timing-function: ease
 }
@@ -503,7 +503,7 @@
 
 /* Dernier bloc */
 .accordion {
-    margin: 50px 0 0;
+    margin: 50px 0 50px;
 }
 
 .accordion-button {
@@ -514,6 +514,30 @@
     line-height: 32px;
     /* identical to box height, or 114% */
     color: #FFFFFF;
+}
+
+.accordion-collapse .accordion-body {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    /* or 130% */
+
+    text-align: justify;
+
+    color: #394149;
+}
+
+.accordion-item .accordion-header .accordion-button {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 32px;
+    /* identical to box height, or 114% */
+
+    color: #212121;
 }
 
 .accordion-collapse .accordion-body {
@@ -695,7 +719,7 @@
         padding-bottom: 20px;
     }
 
-    .image {
+    .images {
         width: 320px;
         height: 400px;
         margin: 50px auto 50px;
@@ -791,7 +815,7 @@
         width: 100%;
     }
 
-    .image {
+    .images {
         width: 240px;
         height: 300px;
         margin: 50px auto 50px;
