--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,16 +1,19 @@
-footer{
+footer {
     background-color: black;
     height: auto;
-
+    width: 100%;
     clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
 }
-.logo{
+
+.logo {
     margin-top: 40px;
 }
+
 .list-unstyled {
     margin-top: 50px;
 }
-.list-unstyled li a{
+
+.list-unstyled li a {
     text-decoration: none;
     text-align: left;
     font-family: "ubuntu";
@@ -19,83 +22,81 @@ footer{
     font-size: 14px;
     line-height: 36px;
     /* or 225% */
-
-
     color: #FFFFFF;
-
 }
 
-.image{
+.image {
     display: flex;
 }
-.image img{
+
+.image img {
     width: 130px;
     margin-top: -10px;
 }
-.sociaux{
+
+.sociaux {}
+
+.sociaux .btn-floating {
+    text-align: left;
 }
-.sociaux .btn-floating{
-text-align: left;
-}
-.text-white{
+
+.text-white {
     font-family: "ubuntu";
     font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 160%;
-/* identical to box height, or 26px */
-
-
-color: #FFFFFF;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 160%;
+    /* identical to box height, or 26px */
+    color: #FFFFFF;
 }
-.form-outline{
+
+.form-outline {
     display: flex;
 }
-.btn-primary{
+
+.btn-primary {
     width: 50px;
     height: 38px;
 }
-.form-control{
+
+.form-control {
     width: 230px;
     height: 38px;
-    background:rgba(255, 255, 255, 0.616);
+    background: rgba(255, 255, 255, 0.616);
     border: none;
-
 }
-.form-label{
+
+.form-label {
     color: white;
-    text-align:center;
+    text-align: center;
     display: inline;
 }
 
-@media (max-width:990px){
-    .form-control{
+@media (max-width:990px) {
+    .form-control {
         width: 230px;
         height: 38px;
         margin-left: -86%;
-
     }
-    .logo{
+    .logo {
         margin-left: -37%;
         margin-top: 150px;
     }
-    footer{
+    footer {
         height: 100%;
     }
-
 }
-@media (max-width:700px){
-    .form-control{
+
+@media (max-width:700px) {
+    .form-control {
         width: 230px;
         height: 38px;
         margin-left: -15%;
     }
-
-
-    .logo{
+    .logo {
         margin-left: -22%;
     }
-    footer{
+    footer {
         height: 100%;
     }
 }
